Simplify engine, validation and CLI after quality review
- Move Car into the simulation package as package-private run state that
  builds its own CarOutcome; drop the duplicate Collision record, the
  unused status() accessor and the redundant status enum.
- Plan moves before executing them so head-on swaps are cancelled up
  front instead of undone via Car.revertTo().
- Let domain types own their rules (Field size, blank names, directions,
  commands); InputParser now only checks input shape. Remove
  InvalidInputException and the rethrow boilerplate.
- Handle end of input inside ask() so prompt layout lives in one place.
- Remove unused SimulationResult.outcomeOf() and unreachable null guards;
  use Direction.valueOf and streams in Command.
- Return a read-only view from Simulation.cars() instead of a copy.
- start.sh: skip test compilation, not just test execution.
- Tests: shared TestCars fixture; README updated.

Co-Authored-By: Claude Opus 5.5 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01JcxPF5Tbpgn3wgFWPfaoG8